# taskvim

./: .gitignore  Cargo.toml  README.md
src/: config.rs  db.rs  domain.rs  error.rs  main.rs  state.rs
src/config/: lua.rs  mod.rs
src/core/: actions.rs  keymap.rs  mod.rs  state.rs  tests.rs
src/domain/: mod.rs  query.rs  tests.rs
src/storage/: mod.rs  sqlite.rs
src/ui/: icons.rs  mod.rs  preferences.rs  sidebar.rs  task_list.rs  themes.rs  tui.rs  window.rs
