[package]
name = "taskit"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
gdk-pixbuf = "0.18"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
directories = "5.0"