[package]
name = "taskvim"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1.36", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
petgraph = "0.6"
directories = "5.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.10"
